Fix text wrap on sections

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,6 +22,7 @@ h2 {
 section, .objective {
   text-align: justify;
   margin: 20px 0;
+  text-wrap: wrap;
 }
 
 ul {
